plugins {
  id 'org.springframework.boot' version '2.7.4'
  id 'io.spring.dependency-management' version '1.0.14.RELEASE'
  id "com.diffplug.spotless" version "6.11.0"
  id 'java'
  id "application"
}

group = 'dev.nazna'
version = '0.0.1-SNAPSHOT'

application {
  mainClass = "dev.nazna.api.user.ApiUserApplication"
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(19)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-webflux'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

  runtimeOnly 'org.postgresql:postgresql'
  runtimeOnly 'org.postgresql:r2dbc-postgresql'

  testImplementation 'io.projectreactor:reactor-test'

  implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.12'
}

spotless {
  java {
    googleJavaFormat()
  }
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.withType(JavaCompile) {
  options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
  jvmArgs += "--enable-preview"
}
